# qoptlib

./: README.md  pyproject.toml  req-dev.txt  req.txt
examples/: benchmark.py  classification.py
qoptlib/: __init__.py
qoptlib/adapters/: __init__.py  tensorflow.py  torch.py
qoptlib/benchmarks/: __init__.py  functions.py  runner.py
qoptlib/opt/: __init__.py  adam.py  base.py  rmsprop.py  sgd.py  tunneling.py
qoptlib/viz/: __init__.py  plotting.py
tests/: test_benchmarks.py  test_numpy_optimizers.py  test_optimizers.py
