[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qoptlib"
version = "0.1.0"
description = "A framework of quantum-inspired classical optimizers for machine learning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Rehan Guha", email = "rehanguha29@gmail.com"}
]
keywords = ["optimizer", "quantum-inspired", "machine-learning", "deep-learning", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.21.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
viz = [
    "matplotlib>=3.5",
    "seaborn>=0.12",
]
all = [
    "qoptlib[dev,viz]",
]

[project.urls]
Homepage = "https://github.com/rehanguha/qoptlib"
Documentation = "https://github.com/rehanguha/qoptlib#readme"
Repository = "https://github.com/rehanguha/qoptlib"
Issues = "https://github.com/rehanguha/qoptlib/issues"

[tool.setuptools.packages.find]
include = ["qoptlib*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
